CHANGELOG

>>VERSION 17.7
* Greatly improved all the banners in the game (prod. Hummel009)
+ Added Asshai Shield
+ Added feminized ranks
+ Added a config option for maximum fellowship size
+ Added a config option to tune how often the mod clears the playerdata cache for offline players' data

* Improved Petyr Baelish's brothel and Tobho Mott's smithy
* Improved Red Castle
* Improved fellowships GUI to be compatible with big UI scale
* Improved fellowship invitation mechanics
* Improved all translations
* Improved iron bank texture (prod. Hummel009)
* Improved tool & weapon stats
* Improved prostitute names & skins
* Improved ranks

* Optimized and recoded all the westeros structures
* Optimized the performance penalty from loading large fellowships upon player login
* Optimized NPCs checking for players with their miniquests
* Optimized rendering code

* Fixed bug with unremovable fellowship users after changing their nickname
* Fixed bug with joining disbanded fellowships
* Fixed bug with not protected food near banner
* Fixed bug with farmers
* Fixed crash in Stepstones
* Fixed 5 minor bugs (thanks to Stalker Kir)
* Fixed 7 minor bugs (thanks to VVVIP2)
* Fixed bug with shields GUI
* Fixed bug with smithing
* Reduced quality of some too elite unrealistic shields

>>VERSION 17.6
+ Added full Ukrainian edition (lore, speech, names, quests: prod. DDPAT Knife Series)
+ Added full Turkish edition (lore, speech, names, quests: prod. Ness)

* Recoded all the flat biome system
* Reworked all the speechbank system
* Great Texture Update (armor sets, shields, capes and banners: prod. Hummel009)

+ Added rice and cucumbers
+ Added riders to natural spawn
+ Added Moribald Chester
+ Added 4 waypoints
+ Added new Jogos Nhai units
+ Added Jogos Nhai banner
+ Added new Hardhome
+ Added skirling pass as a hidden road in mountains
+ Added villages and houses for wildling, thenn and north hillmen
+ Added random corn plants spawning
+ Added random structures
+ Added Tugar Khan