@@ -11,7 +11,7 @@ public abstract class GOTStructureWesterlandsVillageFarm extends GOTStructureWes
 	public static class Crops extends GOTStructureWesterosVillageFarm.Crops {
 		public Crops(boolean flag) {
 			super(flag);
-			isWesterlands = true;	
+			isWesterlands = true;
 		}
 	}
 }
