@@ -7,6 +7,7 @@ CHANGELOG
 + Added a config option for maximum fellowship size
 + Added a config option to tune how often the mod clears the playerdata cache for offline players' data
 
+* Improved village spawning
 * Improved Petyr Baelish's brothel and Tobho Mott's smithy
 * Improved Red Castle
 * Improved fellowships GUI to be compatible with big UI scale
@@ -22,6 +23,7 @@ CHANGELOG
 * Optimized NPCs checking for players with their miniquests
 * Optimized rendering code
 
+* Fixed bug with villages in the villages
 * Fixed bug with unremovable fellowship users after changing their nickname
 * Fixed bug with joining disbanded fellowships
 * Fixed bug with not protected food near banner
